kubernetes-labs/lab-33-istio-service-entry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-33-serviceentry
  labels:
    istio-injection: enabled
